--- a/RealData.Rmd
+++ b/RealData.Rmd
@@ -14,7 +14,6 @@ source("model/score.R")
 source("model/model_comparison.R")
 source("model/weights_generation.R")
 source("model/simulation.R")
-source("model/visualizationResult.R")
 
 library(caret)
 library(rsample)
@@ -73,7 +72,7 @@ library(gridExtra)
 
 path <- getwd()
 pair_data <- df_label[,1:6]
-colnames(pair_data) <- c("V113", "V173", "V475", "V489","V603")
+colnames(pair_data) <- c("V113", "V173", "V475", "V489","V603","truth")
 pair_plot <- ggpairs(pair_data[,1:5], aes(color = truth, alpha = 0.5), 
         upper = list(continuous = wrap('cor', size = 2)))+
   scale_fill_manual(values=c('red','green','blue')) +
